petsc: update to 3.22.0

--- a/mingw-w64-petsc/PKGBUILD
+++ b/mingw-w64-petsc/PKGBUILD
@@ -32,7 +32,7 @@
 _realname=petsc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}" "${MINGW_PACKAGE_PREFIX}-${_realname}-build")
-pkgver=3.21.5
+pkgver=3.22.0
 pkgrel=1
 pkgdesc='Sparse iterative (non)linear solver package (mingw-w64)'
 arch=('any')
@@ -62,16 +62,20 @@ source=("https://web.cels.anl.gov/projects/petsc/download/release-snapshots/${_r
         'petsc-mat.test'
         '0001-mpi-detection-override.patch'
         '0002-openblas-clang.patch'
-        '0003-pid.patch')
+        '0003-pid.patch'
+        '0004-set_output_format.patch'
+        '0005-with-pthread.patch')
 noextract=("${_realname}-lite-${pkgver}.tar.gz")
-sha256sums=('4eb1ec04c1a8988bd524f71f8d7d980dc1853d5be8791c0f19f3c09eef71fdd2'
+sha256sums=('2c03f7c0f7ad2649240d4989355cf7fb7f211b75156cd7d424e1d9dd7dfb290b'
             'ec5072630e1c0309fe383669e9187790cd135a393c67bc4bc35cf60b0ba396ff'
             '15c7af25b91406d5fe5f26cfe00963b6cfde1c3dd466eb25f1b6fae299934966'
             '7d171b2680211b0a4d305dfb866faf5c995e47d0ecf619d33f1cce3190c32128'
             'b1c9c4c4155d10bcf12c5c512df34cd6a781c4c81f6edbc8e331f49c7e10a1f7'
             'bef5353d6d10de492c9832f24b41993c38d1b36a78eb55e7d49089ba72acc05a'
             'c954cc4240a6f3cebdc40cf4fca07561e58eb50717b9741c296b73657bac1c51'
-            '08d37a205d7a2ae27ccef41ee931f92c96aa428b94ed633def2f56fdfa6fb11e')
+            '08d37a205d7a2ae27ccef41ee931f92c96aa428b94ed633def2f56fdfa6fb11e'
+            '254405c6c0eb5aa57b1cb74bbaf8876bcdb67d63136102e48a8036824bb9f129'
+            'bd7d1fa888d24f5183de992fb9377a4532cd9f38c5608018f5cd82f61e3096e9')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -90,7 +94,9 @@ prepare() {
   apply_patch_with_msg \
     0001-mpi-detection-override.patch \
     0002-openblas-clang.patch \
-    0003-pid.patch
+    0003-pid.patch \
+    0004-set_output_format.patch \
+    0005-with-pthread.patch
 }
 
 # Optimized build flavors
@@ -145,7 +151,7 @@ _petsc() {
     ;;
     ?s?)
       opts+=" --with-mpi=0 --with-pthread=0 --with-openmp=0"
-      iflags+=" -I\${includedir}/mpiuni"
+      iflags+=" -I\${includedir}/mpiuni" 
       desc="Sequential"
     ;;
   esac
