fix for languageserver to build shared libs as before

--- a/mingw-w64-qt6-languageserver/PKGBUILD
+++ b/mingw-w64-qt6-languageserver/PKGBUILD
@@ -23,8 +23,26 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-base"
              "rsync")
 _pkgfn="${_realname/6-/}-everywhere-src-${_qtver}"
-source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz")
-sha256sums=('fbf7152c8ca4d1dbdd30205e64a830f378d7ac5ac0b5f02eecab9d7501065cef')
+source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz"
+        001-make-shared-libs.patch)
+sha256sums=('fbf7152c8ca4d1dbdd30205e64a830f378d7ac5ac0b5f02eecab9d7501065cef'
+            '2f376f61a552721f0dae21d8fd07034ed16d8c35189d5fc87242e53b4c3cddc9')
+
+# Helper macros to help make tasks easier #
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
+  done
+}
+
+prepare() {
+  cd "${srcdir}/${_pkgfn}"
+
+  apply_patch_with_msg \
+    001-make-shared-libs.patch 
+}
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
