build static only language server

--- a/mingw-w64-qt6-languageserver/PKGBUILD
+++ b/mingw-w64-qt6-languageserver/PKGBUILD
@@ -2,8 +2,7 @@
 
 _realname=qt6-languageserver
 pkgbase=mingw-w64-${_realname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         "${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 _qtver=6.8.0
 pkgver=${_qtver/-/}
 pkgrel=1
@@ -23,26 +22,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt6-base"
              "rsync")
 _pkgfn="${_realname/6-/}-everywhere-src-${_qtver}"
-source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz"
-        001-make-shared-libs.patch)
-sha256sums=('fbf7152c8ca4d1dbdd30205e64a830f378d7ac5ac0b5f02eecab9d7501065cef'
-            '2f376f61a552721f0dae21d8fd07034ed16d8c35189d5fc87242e53b4c3cddc9')
-
-# Helper macros to help make tasks easier #
-apply_patch_with_msg() {
-  for _patch in "$@"
-  do
-    msg2 "Applying ${_patch}"
-    patch -Nbp1 -i "${srcdir}/${_patch}"
-  done
-}
-
-prepare() {
-  cd "${srcdir}/${_pkgfn}"
-
-  apply_patch_with_msg \
-    001-make-shared-libs.patch 
-}
+source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz")
+sha256sums=('fbf7152c8ca4d1dbdd30205e64a830f378d7ac5ac0b5f02eecab9d7501065cef')
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
@@ -58,35 +39,16 @@ build() {
   ${MINGW_PREFIX}/bin/cmake --build .
 }
 
-package_qt6-languageserver() {
+package() {
   depends=("${MINGW_PACKAGE_PREFIX}-qt6-base")
   groups=("${MINGW_PACKAGE_PREFIX}-qt6")
 
   DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install build-${MSYSTEM}
 
   # Seperate debug-info files
-  rsync -armR --remove-source-files --include="*/" --include="*.debug" --exclude="*" --prune-empty-dirs ${pkgdir}/.${MINGW_PREFIX} ${srcdir}/${MSYSTEM}-debug/
+  #rsync -armR --remove-source-files --include="*/" --include="*.debug" --exclude="*" --prune-empty-dirs ${pkgdir}/.${MINGW_PREFIX} ${srcdir}/${MSYSTEM}-debug/
 
   install -d "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
   install -Dm644 $_pkgfn/LICENSES/* -t "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
 }
 
-package_qt6-languageserver-debug() {
-  depends=("${MINGW_PACKAGE_PREFIX}-qt6-base-debug"
-           "${MINGW_PACKAGE_PREFIX}-${_realname}")
-  groups=("${MINGW_PACKAGE_PREFIX}-qt6-debug")
-  options=('!strip')
-
-  cp -rf ${srcdir}/${MSYSTEM}-debug${MINGW_PREFIX} "${pkgdir}"/
-}
-
-# template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
-# vim: set ft=bash :
-
-# generate wrappers
-for _name in "${pkgname[@]}"; do
-  _short="package_${_name#${MINGW_PACKAGE_PREFIX}-}"
-  _func="$(declare -f "${_short}")"
-  eval "${_func/#${_short}/package_${_name}}"
-done
-# template end;
