--- a/mingw-w64-libmangle-git/PKGBUILD
+++ b/mingw-w64-libmangle-git/PKGBUILD
@@ -5,9 +5,9 @@ pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=12.0.0.r351.gcdf6b16b8
+pkgver=12.0.0.r360.gac299df46
 pkgrel=1
-_commit='cdf6b16b805ce7d02f6b1b742911ba0770b49bbb'
+_commit='ac299df46a616ab09bcd7486593a6ae6a05c0358'
 pkgdesc="MinGW-w64 libmangle (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -23,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "git")
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('3ade06aac627d1310236bd57031c076ff18583d2f4b31caa88ae9a2d04ca5501')
+sha256sums=('778a22a1ff9f41feb537210818952b9f189277933cd99a3d685599bafa117afd')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
