Drop more clang32 packages

--- a/mingw-w64-at-spi2-core/PKGBUILD
+++ b/mingw-w64-at-spi2-core/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.54.0
 pkgrel=1
 pkgdesc="Interface definitions of accessibility infrastructure (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gitlab.gnome.org/GNOME/at-spi2-core"
 license=('spdx:LGPL-2.1-or-later')
 depends=(
