--- a/mingw-w64-ffnvcodec-headers/PKGBUILD
+++ b/mingw-w64-ffnvcodec-headers/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=12.2.72.0
 pkgrel=1
 pkgdesc='FFmpeg version of headers required to interface with Nvidias codec APIs (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url=https://git.videolan.org/?p=ffmpeg/nv-codec-headers.git
 license=('spdx:MIT')
 makedepends=("git")
