--- a/mingw-w64-frei0r-plugins/PKGBUILD
+++ b/mingw-w64-frei0r-plugins/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=2.3.3
 pkgrel=2
 pkgdesc='Minimalistic plugin API for video effects (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://frei0r.dyne.org/"
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
