--- a/mingw-w64-kvazaar/PKGBUILD
+++ b/mingw-w64-kvazaar/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.3.1
 pkgrel=1
 pkgdesc="An open-source HEVC encoder (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url="https://github.com/ultravideo/kvazaar"
 url="https://ultravideo.fi/kvazaar.html"
 license=("spdx:BSD-3-Clause")
