--- a/mingw-w64-libcaca/PKGBUILD
+++ b/mingw-w64-libcaca/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.99.beta20
 pkgrel=5
 pkgdesc="Color AsCii Art library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/cacalabs/libcaca"
 msys2_references=(
   "cpe: cpe:/a:libcaca_project:libcaca"
