--- a/mingw-w64-libgit2/PKGBUILD
+++ b/mingw-w64-libgit2/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.7.2
 pkgrel=3
 pkgdesc='A linkable library for Git (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/libgit2/libgit2'
 msys2_references=(
   "cpe: cpe:/a:libgit2:libgit2"
