--- a/mingw-w64-libvpl/PKGBUILD
+++ b/mingw-w64-libvpl/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.13.0
 pkgrel=1
 pkgdesc="Intel Video Processing Library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://intel.github.io/libvpl'
 msys2_repository_url="https://github.com/intel/libvpl"
 license=('spdx:MIT')
