--- a/mingw-w64-libvpx/PKGBUILD
+++ b/mingw-w64-libvpx/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.14.1
 pkgrel=1
 pkgdesc="The VP8/VP9 Codec SDK (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-libwinpthread-git")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
