--- a/mingw-w64-libyuv/PKGBUILD
+++ b/mingw-w64-libyuv/PKGBUILD
@@ -11,7 +11,7 @@ pkgver=1887.r2537.a6a2ec65
 pkgrel=1
 pkgdesc="YUV conversion and scaling library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://chromium.googlesource.com/libyuv/libyuv"
 license=('spdx:BSD-3-Clause')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
