--- a/mingw-w64-sassc/PKGBUILD
+++ b/mingw-w64-sassc/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.6.2
 pkgrel=1
 pkgdesc="C implementation of Sass CSS preprocessor (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://sass-lang.com/libsass#sassc"
 msys2_references=(
   "cpe: cpe:/a:sass-lang:sassc"
