--- a/mingw-w64-srt/PKGBUILD
+++ b/mingw-w64-srt/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.5.3
 pkgrel=1
 pkgdesc="Secure Reliable Transport (SRT) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:MPL-2.0')
 url="https://www.srtalliance.org/"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
