--- a/mingw-w64-adobe-source-code-pro-fonts/PKGBUILD
+++ b/mingw-w64-adobe-source-code-pro-fonts/PKGBUILD
@@ -9,7 +9,7 @@ pkgrel=1
 pkgdesc="Monospaced font family for user interface and coding environments (mingw-w64)"
 url="https://adobe-fonts.github.io/source-code-pro/"
 arch=(any)
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=(custom)
 _tarname=source-code-pro-${_relver//\//-}
 source=("${_tarname}.tar.gz::https://github.com/adobe-fonts/source-code-pro/archive/${_relver}.tar.gz"
