--- a/mingw-w64-aom/PKGBUILD
+++ b/mingw-w64-aom/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.10.0
 pkgrel=2
 pkgdesc='AV1 codec library (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://aomedia.org/"
 msys2_repository_url="https://aomedia.googlesource.com/aom"
 msys2_changelog_url="https://aomedia.googlesource.com/aom/+/refs/heads/main/CHANGELOG"
