--- a/mingw-w64-asciidoc/PKGBUILD
+++ b/mingw-w64-asciidoc/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=10.2.1
 pkgrel=1
 pkgdesc="AsciiDoc is a text document format for writing notes, documentation, articles, books, ebooks, slideshows, web pages, man pages and blogs (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/asciidoc-py/asciidoc-py"
 msys2_references=(
   'pypi: asciidoc'
