--- a/mingw-w64-dlfcn/PKGBUILD
+++ b/mingw-w64-dlfcn/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.4.1
 pkgrel=1
 pkgdesc="A wrapper for dlfcn to the Win32 API (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/dlfcn-win32/dlfcn-win32"
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
