--- a/mingw-w64-duktape/PKGBUILD
+++ b/mingw-w64-duktape/PKGBUILD
@@ -11,7 +11,7 @@ msys2_references=(
   "cpe: cpe:/a:duktape_project:duktape"
 )
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=("MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc")
 source=("http://duktape.org/duktape-${pkgver}.tar.xz"
