--- a/mingw-w64-fast_float/PKGBUILD
+++ b/mingw-w64-fast_float/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=6.1.0
 pkgrel=1
 pkgdesc="Fast and exact implementation of the C++ from_chars functions for float and double types (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/fastfloat/fast_float'
 license=('spdx:Apache-2.0 OR BSL-1.0 OR MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
