--- a/mingw-w64-gtest/PKGBUILD
+++ b/mingw-w64-gtest/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.15.2
 pkgrel=1
 pkgdesc="Google Testing and Mocking Framework (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/google/googletest"
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
