--- a/mingw-w64-hicolor-icon-theme/PKGBUILD
+++ b/mingw-w64-hicolor-icon-theme/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.18
 pkgrel=1
 pkgdesc="Freedesktop.org Hicolor icon theme (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://wiki.freedesktop.org/www/Software/icon-theme/"
 msys2_repository_url="https://gitlab.freedesktop.org/xdg/default-icon-theme"
 license=("spdx:GPL-2.0-or-later")
