--- a/mingw-w64-highway/PKGBUILD
+++ b/mingw-w64-highway/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.0
 pkgrel=1
 pkgdesc="C++ library for SIMD (Single Instruction, Multiple Data) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/google/highway'
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
