--- a/mingw-w64-l-smash/PKGBUILD
+++ b/mingw-w64-l-smash/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="Loyal to Spec of Mpeg4 and Ad-hoc Simple Hackwork. Yet another opensour
 pkgver=2.14.5
 pkgrel=3
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://l-smash.github.io/l-smash/"
 license=('spdx:ISC')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
