--- a/mingw-w64-libde265/PKGBUILD
+++ b/mingw-w64-libde265/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.0.15
 pkgrel=1
 pkgdesc="Open h.265 video codec library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/strukturag/libde265"
 msys2_references=(
   "cpe: cpe:/a:struktur:libde265"
