--- a/mingw-w64-libexif/PKGBUILD
+++ b/mingw-w64-libexif/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.6.24
 pkgrel=3
 pkgdesc="A library to parse an EXIF file and read the data from those tags (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libexif.github.io/"
 msys2_references=(
   "cpe: cpe:/a:libexif:libexif"
