--- a/mingw-w64-libmodplug/PKGBUILD
+++ b/mingw-w64-libmodplug/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.8.9.0
 pkgrel=4
 pkgdesc="A MOD playing library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://modplug-xmms.sourceforge.io/"
 msys2_references=(
   "cpe: cpe:/a:konstanty_bialkowski:libmodplug"
