--- a/mingw-w64-libssh/PKGBUILD
+++ b/mingw-w64-libssh/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.11.1
 pkgrel=1
 pkgdesc="Library for accessing ssh client services through C libraries (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.libssh.org/"
 msys2_repository_url='https://git.libssh.org/projects/libssh.git/'
 msys2_issue_tracker_url='https://gitlab.com/libssh/libssh-mirror/-/issues'
