--- a/mingw-w64-libtheora/PKGBUILD
+++ b/mingw-w64-libtheora/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.1.1
 pkgrel=7
 pkgdesc="An open video codec developed by the Xiph.org (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://xiph.org/"
 license=('BSD')
 depends=("${MINGW_PACKAGE_PREFIX}-libpng"
