--- a/mingw-w64-libva/PKGBUILD
+++ b/mingw-w64-libva/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.22.0
 pkgrel=1
 pkgdesc='Video Acceleration (VA) API (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://intel.github.io/libva/'
 msys2_repository_url='https://github.com/intel/libva'
 license=('spdx:MIT')
