--- a/mingw-w64-openexr/PKGBUILD
+++ b/mingw-w64-openexr/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.2.4
 pkgrel=1
 pkgdesc='A high dynamic-range image file format library (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.openexr.com/"
 msys2_repository_url='https://github.com/AcademySoftwareFoundation/openexr'
 msys2_references=(
