--- a/mingw-w64-openjpeg2/PKGBUILD
+++ b/mingw-w64-openjpeg2/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.5.2
 pkgrel=1
 pkgdesc="An open source JPEG 2000 codec (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/uclouvain/openjpeg'
 msys2_references=(
   "cpe: cpe:/a:uclouvain:openjpeg"
