--- a/mingw-w64-python-glad/PKGBUILD
+++ b/mingw-w64-python-glad/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.0.5
 pkgrel=2
 pkgdesc='Multi-Language Vulkan/GL/GLES/EGL/GLX/WGL Loader-Generator based on the official specs (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/Dav1dde/glad'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
