--- a/mingw-w64-python-pytest-shutil/PKGBUILD
+++ b/mingw-w64-python-pytest-shutil/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.8.0
 pkgrel=1
 pkgdesc='A goodie-bag of unix shell and environment tools for py.test (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: pytest-shutil'
 )
