--- a/mingw-w64-python-setuptools-git/PKGBUILD
+++ b/mingw-w64-python-setuptools-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=4
 pkgdesc="Setuptools revision control system plugin for Git (mingw-w64)"
 url="https://pypi.org/project/setuptools-git/"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-setuptools-git'
   'pypi: setuptools-git'
