--- a/mingw-w64-shared-mime-info/PKGBUILD
+++ b/mingw-w64-shared-mime-info/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.4
 pkgrel=1
 pkgdesc="Freedesktop.org Shared MIME Info (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-libxml2"
          "${MINGW_PACKAGE_PREFIX}-glib2")
