--- a/mingw-w64-spirv-cross/PKGBUILD
+++ b/mingw-w64-spirv-cross/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.3.296.0
 pkgrel=1
 pkgdesc="A tool and library for parsing and converting SPIR-V to other shader languages (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/KhronosGroup/SPIRV-Cross/'
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
