--- a/mingw-w64-vid.stab/PKGBUILD
+++ b/mingw-w64-vid.stab/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.1.1
 pkgrel=1
 pkgdesc="Video stabilization library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='http://public.hronopik.de/vid.stab'
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
