--- a/mingw-w64-xvidcore/PKGBUILD
+++ b/mingw-w64-xvidcore/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.3.7
 pkgrel=4
 pkgdesc="XviD is an open source MPEG-4 video codec (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('GPL')
 url="https://www.xvid.com/"
 options=('strip' '!libtool' 'staticlibs')
