fix the package name inside PKGBUILD

--- a/mingw-w64-nanobind/PKGBUILD
+++ b/mingw-w64-nanobind/PKGBUILD
@@ -1,8 +1,8 @@
 # Contributor: Marcelo Duarte https://github.com/marcelotduarte
 
 _realname=nanobind
-pkgbase=mingw-w64-python-${_realname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
+pkgbase=mingw-w64-${_realname}
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.2.0
 pkgrel=1
 pkgdesc="nanobind: tiny and efficient C++/Python bindings (mingw-w64)"
