python-tinyaes: update to 1.1.1

--- a/mingw-w64-python-tinyaes/PKGBUILD
+++ b/mingw-w64-python-tinyaes/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=tinyaes
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.1.0
+pkgver=1.1.1
 pkgrel=1
 pkgdesc='tiny-AES-c wrapper in Cython (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'aur: python-tinyaes'
   'pypi: tinyaes'
@@ -21,10 +21,9 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-  "${MINGW_PACKAGE_PREFIX}-python-wheel"
 )
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('a825b1ab966c54d90593bae30a83a1548dfe347934f8a4e78d8f43fa42960835')
+sha256sums=('ccaae60401b31dcdc767bead0e3292d550e5c24e2c678cea898e40eafc4b008a')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
