--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -1,51 +1,47 @@
 # Maintainer: Raphael Amorim <rapha850@gmail.com>
 _realname=rio
 pkgbase=mingw-w64-${realname}
-pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.1.16
 pkgrel=1
 pkgdesc="A hardware-accelerated GPU terminal emulator focusing to run in desktops and browsers (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang32' 'clang64' 'clangarm64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/raphamorim/rio"
-license=('spdx:MIT')
+license=('MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
-             "${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ncurses"
-             "${MINGW_PACKAGE_PREFIX}-desktop-file-utils"
-             "${MINGW_PACKAGE_PREFIX}-gdb"
              'git')
 depends=("${MINGW_PACKAGE_PREFIX}-freetype"
          "${MINGW_PACKAGE_PREFIX}-fontconfig")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-ttf-dejavu")
-optdepends=("${MINGW_PACKAGE_PREFIX}-ncurses: for rio terminfo database")
 source=("git+${url}.git#tag=v${pkgver}?signed")
 sha256sums=('SKIP')
+
 prepare() {
-  cd "${srcdir}/${_realname}"
-  if [[ $MINGW_PACKAGE_PREFIX == *-clang-aarch64 ]]; then
-    cargo fetch --locked --target aarch64-pc-windows-gnullvm
-  else
-    cargo fetch --locked --target "${CARCH}-pc-windows-gnu"
-  fi
+  cd "${_realname}-${pkgver}"
+
+  # if cargo wants to make an http request at build stage, use `cargo fetch --locked` instead
+  cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
+
 build() {
-  cd "${srcdir}"
-  rm -rf "build-${MSYSTEM}" | true
-  cp -r "${_realname}" "build-${MSYSTEM}"
-  cd "build-${MSYSTEM}"
-  WINAPI_NO_BUNDLED_LIBRARIES=1 \
-    "${MINGW_PREFIX}/bin/cargo.exe" build \
-    --release \
-    --locked
+  cd "${_realname}-${pkgver}"
+
+  cargo build --release --frozen
 }
+
 check() {
-  cd "${srcdir}/build-${MSYSTEM}"
-  "${MINGW_PACKAGE_PREFIX}/bin/cargo.exe" test \
-    --release \
-    --locked
+  cd "${_realname}-${pkgver}"
+
+  cargo test --release --frozen
 }
+
 package() {
-  cd "${srcdir}/build-${MSYSTEM}"
-  install -Dm755 "target/release/${_realname}.exe" "${pkgdir}${MINGW_PREFIX}/bin/${_realname}.exe"
+  cd "${_realname}-${pkgver}"
+
+  cargo install \
+    --offline \
+    --no-track \
+    --frozen \
+    --path . \
+    --root "${pkgdir}${MINGW_PREFIX}"
 }
