avoid signed and add sha256sums

--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -6,15 +6,15 @@ pkgver=0.1.16
 pkgrel=1
 pkgdesc="A hardware-accelerated GPU terminal emulator focusing to run in desktops and browsers (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/raphamorim/rio"
 license=('MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              'git')
 depends=("${MINGW_PACKAGE_PREFIX}-freetype"
          "${MINGW_PACKAGE_PREFIX}-fontconfig")
-source=("git+${url}.git#tag=v${pkgver}?signed")
-sha256sums=('SKIP')
+source=("https://github.com/raphamorim/${_realname}/archive/refs/tags/v${pkgver}.tar.gz")
+sha256sums=('5311753404c4475751a514305e4dbb75c565f386e5ccf66d8238f135c1cd786f')
 
 prepare() {
   cd "${_realname}-${pkgver}"
