respect cargo workspace

--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -39,6 +39,7 @@ package() {
   cd "${_realname}-${pkgver}"
 
   cargo install \
+    -p rioterm \
     --offline \
     --no-track \
     --frozen \
