--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -26,13 +26,13 @@ prepare() {
 build() {
   cd "${_realname}-${pkgver}"
 
-  cargo build --release --frozen
+  cargo build -p rioterm --release --frozen
 }
 
 check() {
   cd "${_realname}-${pkgver}"
 
-  cargo test --release --frozen
+  cargo test -p rioterm --release --frozen
 }
 
 package() {
