-p on install does not work, try with path

--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -39,10 +39,9 @@ package() {
   cd "${_realname}-${pkgver}"
 
   cargo install \
-    -p rioterm \
     --offline \
     --no-track \
     --frozen \
-    --path . \
+    --path ./frontends/rioterm \
     --root "${pkgdir}${MINGW_PREFIX}"
 }
