--- a/mingw-w64-python-pylsqpack/PKGBUILD
+++ b/mingw-w64-python-pylsqpack/PKGBUILD
@@ -34,7 +34,7 @@ build() {
 
 package() {
   cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX}
+  ${MINGW_PREFIX}/bin/python setup.py install --root=${pkgdir} --single-version-externally-managed
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
