--- a/mingw-w64-libspng/PKGBUILD
+++ b/mingw-w64-libspng/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.7.4
 pkgrel=1
 pkgdesc="a C library for reading and writing Portable Network Graphics (PNG) format files with a focus on security and ease of use (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/randy408/libspng'
 license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-zlib")
