rufus: update to 4.6

--- a/mingw-w64-rufus/PKGBUILD
+++ b/mingw-w64-rufus/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=rufus
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.5
-pkgrel=2
+pkgver=4.6
+pkgrel=1
 pkgdesc="The Reliable USB Formatting Utility (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -13,19 +13,8 @@ msys2_repository_url='https://github.com/pbatard/rufus'
 license=('spdx:GPL-3.0-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${msys2_repository_url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "ucrt-build.patch")
-sha256sums=('4e8135f1d6be9f85cc93b49ac4bb70082315884b207f36c771cb320c24473564'
-            'e690cf87049d289f8cc65fa277917a7847e4972d6609e8107c28068d990fd527')
-
-prepare() {
-  cd "${_realname}-${pkgver}"
-
-  if [ $MSYSTEM = UCRT64 ]; then
-    unix2dos "${srcdir}/ucrt-build.patch"
-    patch -Np1 --binary -i "${srcdir}/ucrt-build.patch"
-  fi
-}
+source=("${msys2_repository_url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('4cec02a5f1400d7b5b5696fcd0eb90615d9d913f0ead2680d6d9411ee23875cf')
 
 build() {
   mkdir -p "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
@@ -42,5 +31,5 @@ package() {
   cd "build-${MSYSTEM}"
 
   install -Dm755 src/rufus.exe "${pkgdir}${MINGW_PREFIX}/bin/rufus.exe"
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.txt"
+  install -Dm644 "../${_realname}-${pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.txt"
 }
