python-mdit_py_plugins: update to 0.4.2

--- a/mingw-w64-python-mdit_py_plugins/PKGBUILD
+++ b/mingw-w64-python-mdit_py_plugins/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=mdit_py_plugins
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.4.1
+pkgver=0.4.2
 pkgrel=1
 pkgdesc="Collection of core plugins for markdown-it-py (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://mdit-py-plugins.readthedocs.io/'
 msys2_repository_url='https://github.com/executablebooks/mdit-py-plugins'
 msys2_references=(
@@ -20,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('834b8ac23d1cd60cec703646ffd22ae97b7955a6d596eb1d304be1e251ae499c')
+sha256sums=('5f2cd1fdb606ddf152d37ec30e46101a60512bc0e5fa1a7002c36647b09e26b5')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
