python-spin: update to 0.12

--- a/mingw-w64-python-spin/PKGBUILD
+++ b/mingw-w64-python-spin/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=spin
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.7
+pkgver=0.12
 pkgrel=1
 pkgdesc="Developer tool for scientific Python libraries (mingw-w64)"
 arch=('any')
@@ -12,32 +12,29 @@ url='https://github.com/scientific-python/spin'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-click"
-         "${MINGW_PACKAGE_PREFIX}-python-colorama")
+         "${MINGW_PACKAGE_PREFIX}-python-colorama"
+         "${MINGW_PACKAGE_PREFIX}-python-importlib-metadata")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('b1a0841527f94fdf10415ce4f3b273a36d62c229412aa5e81d4664473405f29c')
+sha256sums=('5d8ddb8fcc116b25fdee36e88fceeece68203511c00012f892d9736c5cffe3eb')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}"
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
-  msg "Python test for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m pytest
 }
 
 package() {
-  msg "Python install for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
