thrift: update to 0.21.0

--- a/mingw-w64-thrift/PKGBUILD
+++ b/mingw-w64-thrift/PKGBUILD
@@ -5,13 +5,13 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
-pkgver=0.20.0
+pkgver=0.21.0
 pkgrel=1
 pkgdesc="Apache Thrift is a software framework for scalable cross-language services development (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://thrift.apache.org/'
-msys2_repository_url="http://github.com/apache/thrift"
+msys2_repository_url="https://github.com/apache/thrift"
 msys2_references=(
   "cpe: cpe:/a:apache:thrift"
 )
@@ -26,7 +26,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 source=("https://archive.apache.org/dist/thrift/${pkgver}/${_realname}-${pkgver}.tar.gz"{,.asc}
         001-math-define-pi.patch
         002-fix-pkgconfig-paths.patch)
-sha256sums=('b5d8311a779470e1502c027f428a1db542f5c051c8e1280ccd2163fa935ff2d6'
+sha256sums=('9a24f3eba9a4ca493602226c16d8c228037db3b9291c6fc4019bfe3bd39fc67c'
             'SKIP'
             '1c84e10b84b3d44f5ab2e7be7505c9375f0a5516b906e2a52784d6c5c01fab08'
             '7d6f3ec1844adefaad6e96437fd921a6a6f859dd6e7f9d60259eadc90ce570cc')
