update per comments

--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -11,15 +11,12 @@ url="https://github.com/raphamorim/rio"
 license=('MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              'git')
-depends=("${MINGW_PACKAGE_PREFIX}-freetype"
-         "${MINGW_PACKAGE_PREFIX}-fontconfig")
 source=("https://github.com/raphamorim/${_realname}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('5311753404c4475751a514305e4dbb75c565f386e5ccf66d8238f135c1cd786f')
 
 prepare() {
   cd "${_realname}-${pkgver}"
 
-  # if cargo wants to make an http request at build stage, use `cargo fetch --locked` instead
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
@@ -42,6 +39,6 @@ package() {
     --offline \
     --no-track \
     --frozen \
-    --path ./frontends/rioterm \
+    --path frontends/rioterm \
     --root "${pkgdir}${MINGW_PREFIX}"
 }
