--- a/mingw-w64-python-mpi4py/PKGBUILD
+++ b/mingw-w64-python-mpi4py/PKGBUILD
@@ -15,7 +15,7 @@ url='https://mpi4py.github.io/stable/'
 msys2_references=(
   'pypi: mpi4py'
 )
-license=('BSD')
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
