llvm: update to 19.1.0

--- a/mingw-w64-libc++/PKGBUILD
+++ b/mingw-w64-libc++/PKGBUILD
@@ -8,7 +8,7 @@ _realname=libc++
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-libunwind")
-_version=18.1.8
+_version=19.1.0
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
@@ -38,17 +38,17 @@ source=("${_url}/libcxx-${pkgver}.src.tar.xz"{,.sig}
         "${_url}/runtimes-${pkgver}.src.tar.xz"{,.sig}
         "${_url}/llvm-${pkgver}.src.tar.xz"{,.sig}
         "${_url}/cmake-${pkgver}.src.tar.xz"{,.sig})
-sha256sums=('bdecf90be0072bc720fd5c9c8ab061cdb197edd0c8ad3e170dc3e6bfaa49f388'
+sha256sums=('99b3020a8b2134a2efc0c26e2ef9b1f07003f65330fa8eb9c2458f14bbf32f39'
             'SKIP'
-            '256c30d724eeb72713bc08ae1692f53aaf4ebe8a1d662c92bf59e69d6c53dce9'
+            '0108a40b18d586a4706c03d8eeb78714a242e64ed930aeb74a0574e1c6668a6d'
             'SKIP'
-            'c31577d16978b0da0e472ef751f74893a5b459a7ea4a383b75f7ab93cf1e6877'
+            'c5e9205f785511e8487bb1c5a51dbb57bfdf946d48bbc4ef5cfb413ff8fdc259'
             'SKIP'
-            '9997c2e91e5438e2963306ba5019d85b5384b467535632738d8670ced8f07cb3'
+            'e5fc29e02198bc1f900c7e42590720cf4b664d4bee75e5d02bc45a4483f2a3b1'
             'SKIP'
-            'f68cf90f369bc7d0158ba70d860b0cb34dbc163d6ff0ebc6cfa5e515b9b2e28d'
+            'a8b141cbfa13f50d84ce545899bd311aaa60d59dfbf7f3a0cf84f25badc1544d'
             'SKIP'
-            '59badef592dd34893cd319d42b323aaa990b452d05c7180ff20f23ab1b41e837'
+            'dc78b6a9ac8a097ca6ac0f23c06821d65e6ea3bf666026f529994c1d01056ae7'
             'SKIP')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
@@ -122,6 +122,7 @@ build() {
     -DLIBUNWIND_ENABLE_FRAME_APIS=ON \
     -DLIBUNWIND_ENABLE_SHARED=ON \
     -DLIBUNWIND_ENABLE_STATIC=ON \
+    -DLLVM_INCLUDE_TESTS=OFF \
     "${_extra_config[@]}" \
     -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python.exe \
     -Wno-dev \
