--- a/mingw-w64-python-mpi4py/PKGBUILD
+++ b/mingw-w64-python-mpi4py/PKGBUILD
@@ -7,8 +7,9 @@ pkgver=4.0.1
 pkgrel=1
 pkgdesc="Python bindings for the Message Passing Interface (MPI) standard (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://mpi4py.github.io/stable/'
+msys2_repository_url="https://github.com/mpi4py/mpi4py"
 msys2_references=(
   'pypi: mpi4py'
 )
@@ -20,8 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cython"
              "${MINGW_PACKAGE_PREFIX}-python-wheel"
              "${MINGW_PACKAGE_PREFIX}-msmpi")
-options=('staticlibs' 'strip' '!debug')
-source=(${_realname}-${pkgver}.tar.gz::"https://github.com/mpi4py/mpi4py/releases/download/${pkgver}/mpi4py-${pkgver}.tar.gz")
+source=("https://github.com/mpi4py/mpi4py/releases/download/${pkgver}/mpi4py-${pkgver}.tar.gz")
 sha256sums=('f3174b245775d556f4fddb32519a2066ef0592edc810c5b5a59238f9a0a40c89')
 
 prepare() {
@@ -34,16 +34,20 @@ prepare() {
   sed -i 's@## libraries            = mpi@libraries            = msmpi@g' mpi.cfg
   sed -i 's@## library_dirs         = %(mpi_dir)s/lib@library_dirs         = %(mpi_dir)s/lib@g' mpi.cfg
   #sed -i 's@## runtime_library_dirs = %(mpi_dir)s/lib@runtime_library_dirs = %(mpi_dir)s/bin@g' mpi.cfg
+
+  cd "${srcdir}"
+  rm -rf python-build-${MSYSTEM} | true
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}/"
+  cd "${srcdir}"/python-build-${MSYSTEM}
   ${MINGW_PREFIX}/bin/python -m build --wheel --no-isolation
 }
 
 package() {
-  cd "${srcdir}/${_realname}-${pkgver}/"
+  cd "${srcdir}"/python-build-${MSYSTEM}
   MSYS2_ARG_CONV_EXCL="--prefix=" \
   ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} --destdir="${pkgdir}" dist/*.whl
-  install -Dm644 LICENSE.rst -t "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/"
+  install -Dm644 LICENSE.rst -t "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-${_realname}/
 }
