--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -2,17 +2,16 @@
 _realname=rio
 pkgbase=mingw-w64-${realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.1.16
+pkgver=0.1.17
 pkgrel=1
 pkgdesc="A hardware-accelerated GPU terminal emulator focusing to run in desktops and browsers (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/raphamorim/rio"
 license=('MIT')
-makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
-             'git')
+makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 source=("https://github.com/raphamorim/${_realname}/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('5311753404c4475751a514305e4dbb75c565f386e5ccf66d8238f135c1cd786f')
+sha256sums=('2e17a8775a5463f4ad96e55b90468561b08636d8d260bb295770aef930168000')
 
 prepare() {
   cd "${_realname}-${pkgver}"
