python-oslo-context: update to 5.6.0

--- a/mingw-w64-python-oslo-context/PKGBUILD
+++ b/mingw-w64-python-oslo-context/PKGBUILD
@@ -4,10 +4,7 @@ _pyname=oslo.context
 _realname=oslo-context
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=5.4.0
+pkgver=5.6.0
 pkgrel=1
 pkgdesc="OpenStack Context library (mingw-w64)"
 arch=('any')
@@ -27,27 +24,17 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-debtcollector")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-mock"
               "${MINGW_PACKAGE_PREFIX}-python-oslotest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('e96491bbdd6b51e72a3a8c546a129b84d239e8e9e0b5210c8ba7c0a0a5629919')
+sha256sums=('5222c32636be070a230df9d3141a0b27a95f0a3b6978f4c1485bcada47a4c3cb')
 
-prepare() {
-  cd "${srcdir}/${_pyname}-${pkgver}"
-
+build () {
   # Set version for python-pbr
   export PBR_VERSION=${pkgver}
 
-  cd ${srcdir}
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}"
-}
-
-build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-
+  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
