openssl: Update to 3.4.0
Refresh 002-relocation.patch.

The whole openssl dir code was changed upstream and now has everything
in one place with the option to read the dirs from the Windows registry
if built with OSSL_WINCTX defined.

The registry parts are from what I see namespaced by version and written
by the official installer, so we probably don't want to use that to avoid
any conflicts with the official installation.

The upside though is that we need to add relocation in fewer places now,
and even the "openssl info" commands will use the new functions to now
show proper Windows paths instead of the configure time cygwin ones.

Besides that there shouldn't be any functional change.

and -j1 for make install to avoid it failing

--- a/mingw-w64-openssl/PKGBUILD
+++ b/mingw-w64-openssl/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=openssl
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=3.3.2
+pkgver=3.4.0
 pkgrel=1
 pkgdesc="The Open Source toolkit for Secure Sockets Layer and Transport Layer Security (mingw-w64)"
 arch=('any')
@@ -24,10 +24,10 @@ source=("https://github.com/openssl/openssl/releases/download/openssl-${pkgver}/
         '002-relocation.patch'
         'pathtools.c'
         'pathtools.h')
-sha256sums=('2e8a40b01979afe8be0bbfb3de5dc1c6709fedb46d6c89c10da114ab5fc3d281'
+sha256sums=('e15dda82fe2fe8139dc2ac21a36d4ca01d5313c75f99f46c4e8a27709b7294bf'
             'SKIP'
             '21b96771b401442570e885c2d5689a359a91e86dcbf5511db3667202b6c1fa8a'
-            '8a2d91826bd1a8fd6d3a981d2a71cfb3170060f64a053eafd8e3b32f6a30ac3b'
+            '163f01573b83a12df4bec2022339d0517cbb779538e7d2d0c0bb25da50614f5a'
             'ebf471173f5ee9c4416c10a78760cea8afaf1a4a6e653977321e8547ce7bf3c0'
             '1585ef1b61cf53a2ca27049c11d49e0834683dfda798f03547761375df482a90')
 # https://openssl-library.org/source/index.html
@@ -109,7 +109,7 @@ check() {
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
-  make install DESTDIR="${pkgdir}"
+  make -j1 install DESTDIR="${pkgdir}"
 
   # https://github.com/openssl/openssl/issues/24298
   for pcfile in "${pkgdir}${MINGW_PREFIX}"/lib/pkgconfig/*.pc; do
