update per comment

--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Raphael Amorim <rapha850@gmail.com>
 _realname=rio
-pkgbase=mingw-w64-${realname}
+pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.1.17
 pkgrel=1
@@ -8,7 +8,7 @@ pkgdesc="A hardware-accelerated GPU terminal emulator focusing to run in desktop
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/raphamorim/rio"
-license=('MIT')
+license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 source=("https://github.com/raphamorim/${_realname}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('2e17a8775a5463f4ad96e55b90468561b08636d8d260bb295770aef930168000')
