kate, helix: change clang to clang-tools-extra because it actually contains clang

--- a/mingw-w64-helix/PKGBUILD
+++ b/mingw-w64-helix/PKGBUILD
@@ -4,7 +4,7 @@ _realname=helix
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=24.07
-pkgrel=3
+pkgrel=4
 pkgdesc="A post-modern modal text editor (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,7 +15,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "git")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 optdepends=("${MINGW_PACKAGE_PREFIX}-rust-analyzer: Rust LSP"
-            "${MINGW_PACKAGE_PREFIX}-clang: for clangd"
+            "${MINGW_PACKAGE_PREFIX}-clang-tools-extra: for clangd"
             "${MINGW_PACKAGE_PREFIX}-lldb: for lldb-dap")
 source=("$url/archive/$pkgver/${_realname}-${pkgver}.tar.gz"
         'icon.patch'
