--- a/mingw-w64-kate/PKGBUILD
+++ b/mingw-w64-kate/PKGBUILD
@@ -5,7 +5,7 @@ _realname=kate
 pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=24.08.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Advanced text editor (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -53,7 +53,7 @@ makedepends=(
 )
 optdepends=(
   "${MINGW_PACKAGE_PREFIX}-breeze-icons: application icon theme"
-  "${MINGW_PACKAGE_PREFIX}-clang: C and C++ LSP support"
+  "${MINGW_PACKAGE_PREFIX}-clang-tools-extra: C and C++ LSP support"
   "${MINGW_PACKAGE_PREFIX}-konsole: open a terminal in Kate"
   "${MINGW_PACKAGE_PREFIX}-rust-analyzer: Rust LSP support"
   "git: git-blame plugin"
