--- a/mingw-w64-qt6-pdf/PKGBUILD
+++ b/mingw-w64-qt6-pdf/PKGBUILD
@@ -4,7 +4,7 @@ _realname=qt6-pdf
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
-_qtver=6.7.2
+_qtver=6.8.0
 pkgver=${_qtver/-/}
 pkgrel=1
 pkgdesc='QtPdf module (mingw-w64)'
@@ -48,8 +48,8 @@ _pkgfn="qtwebengine-everywhere-src-${_qtver}"
 source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz"
         "001-use-system-libs.patch"
         "002-use-mingw-python3.patch")
-sha256sums=('c7755875594d8be382b07bf3634d44fd77012805794d8b588891709a6405ffd1'
-            '9691b38d93e9eb712f7bfe57cacffe138db93ae2ef848a334795e57e94843db9'
+sha256sums=('2484459248a8624c16b70780bef3fe4bc7f4eace2178f84233d4e711cb7f7452'
+            '0f5febe6213ba6a7a669b7cd815ab885e7038fc631f2a0b1ff6a589ebba1f2b2'
             'ea5816f192db1ba7b359e1e592aad2417fb3b87fc73de13d4f6925c297d83d64')
 
 apply_patch_with_msg() {
@@ -80,6 +80,7 @@ build() {
     -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python \
     -DQT_FEATURE_qtwebengine_build=OFF \
     -DQT_FEATURE_webengine_system_icu=ON \
+    -DQT_FEATURE_webengine_system_re2=ON \
     -DQT_FEATURE_system_png=OFF \
     ../${_pkgfn}
 
