python-xpra: update dependencies
* libspng added as it is now available.
* python-lz4 is no longer used by xpra.
* python-rencode was also removed a while back.
* update info strings for gstreamer modules: these are used for both audio and video since v5.
* add optional dependency on aioquic to provide the QUIC transport.

--- a/mingw-w64-python-xpra/PKGBUILD
+++ b/mingw-w64-python-xpra/PKGBUILD
@@ -4,7 +4,7 @@ _realname=xpra
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=6.2.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Remote access client/server software (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,6 +17,7 @@ license=('spdx:GPL-2.0-or-later')
 depends=(
     ${MINGW_PACKAGE_PREFIX}-gtk3
     ${MINGW_PACKAGE_PREFIX}-libjpeg-turbo
+    ${MINGW_PACKAGE_PREFIX}-libspng
     ${MINGW_PACKAGE_PREFIX}-libvpx
     ${MINGW_PACKAGE_PREFIX}-libwebp
     ${MINGW_PACKAGE_PREFIX}-libyuv
@@ -24,20 +25,18 @@ depends=(
     ${MINGW_PACKAGE_PREFIX}-python-comtypes
     ${MINGW_PACKAGE_PREFIX}-python-gobject
     ${MINGW_PACKAGE_PREFIX}-lz4
-    ${MINGW_PACKAGE_PREFIX}-python-lz4
     ${MINGW_PACKAGE_PREFIX}-python-pillow
     ${MINGW_PACKAGE_PREFIX}-python-pyopengl
-    ${MINGW_PACKAGE_PREFIX}-python-rencode
     ${MINGW_PACKAGE_PREFIX}-python-setproctitle
     ${MINGW_PACKAGE_PREFIX}-xxhash
     ${MINGW_PACKAGE_PREFIX}-libx264)
 optdepends=(
     "${MINGW_PACKAGE_PREFIX}-libnotify: notification support"
     "${MINGW_PACKAGE_PREFIX}-gstreamer: audio/video streaming support"
-    "${MINGW_PACKAGE_PREFIX}-gst-plugins-bad: extra audio codecs"
-    "${MINGW_PACKAGE_PREFIX}-gst-plugins-ugly: extra audio codecs"
-    "${MINGW_PACKAGE_PREFIX}-gst-plugins-good: extra audio codecs"
-    "${MINGW_PACKAGE_PREFIX}-gst-python: audio support"
+    "${MINGW_PACKAGE_PREFIX}-gst-plugins-bad: extra codecs"
+    "${MINGW_PACKAGE_PREFIX}-gst-plugins-ugly: extra codecs"
+    "${MINGW_PACKAGE_PREFIX}-gst-plugins-good: extra codecs"
+    "${MINGW_PACKAGE_PREFIX}-gst-python: audio/video support"
     "${MINGW_PACKAGE_PREFIX}-python-paramiko: SSH client and server support"
     "${MINGW_PACKAGE_PREFIX}-python-dnspython: SSHFP support with paramiko"
     "${MINGW_PACKAGE_PREFIX}-python-netifaces: mDNS and network integration"
@@ -45,6 +44,7 @@ optdepends=(
     "${MINGW_PACKAGE_PREFIX}-python-ldap: LDAP authentication via python-ldap"
     "${MINGW_PACKAGE_PREFIX}-python-ldap3: LDAP authentication via python-ldap3"
     "${MINGW_PACKAGE_PREFIX}-python-cryptography: AES packet encryption"
+    "${MINGW_PACKAGE_PREFIX}-python-aioquic: QUIC transport"
     "${MINGW_PACKAGE_PREFIX}-python-zeroconf: mDNS support"
     "${MINGW_PACKAGE_PREFIX}-python-nvidia-ml: nvidia GPU support"
     "${MINGW_PACKAGE_PREFIX}-python-pyopengl-accelerate: OpenGL-accelerate support")
