OpenScenceGraph: rebuild with OpenCASCADE 7.8
Add patch to link against new library names.

--- a/mingw-w64-OpenSceneGraph/PKGBUILD
+++ b/mingw-w64-OpenSceneGraph/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 _pkgver=3.6.5
 pkgver=${_pkgver//-/}
-pkgrel=32
+pkgrel=33
 pkgdesc="Open source high performance 3D graphics toolkit (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -66,6 +66,7 @@ source=(https://github.com/openscenegraph/OpenSceneGraph/archive/${_realname}-${
         ffmpeg4.4.patch
         # https://github.com/openscenegraph/OpenSceneGraph/issues/946
         fadetext.patch::https://github.com/openscenegraph/OpenSceneGraph/commit/e4373b01439e86623dbda4c4dc27b15c3770d38d.patch
+        0009-opencascade-7.8.patch
         )
 sha256sums=('aea196550f02974d6d09291c5d83b51ca6a03b3767e234a8c0e21322927d1e12'
             '3c7469cf0741905f2c46e4632159220213532d8f194b711b0600b50ad94ab4f8'
@@ -77,7 +78,8 @@ sha256sums=('aea196550f02974d6d09291c5d83b51ca6a03b3767e234a8c0e21322927d1e12'
             '0413b3244e91ca7664bd6d6c2a646fae6adb126b181d484eea41a4b7346d1078'
             '7dd35b920e95a7b0de0c14dee59b28f2a279bfdb8f4971e94395e51a4be9bad9'
             '64a492d266e49aec611fd609251fa7dd08f75e86b25120a1abaf0328223c921a'
-            'c7fbc0470a9c9630d4e78ddd8391f131c470b3e034313c76a71efb7da6880b11')
+            'c7fbc0470a9c9630d4e78ddd8391f131c470b3e034313c76a71efb7da6880b11'
+            '8ea017422c80ec980f06b9e7823ac0ef53ec2baaa545b944b9079a2b511c3a9b')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -100,7 +102,8 @@ prepare() {
     0008-opencascade-7.6.0.patch \
     openscenegraph-3.6.5-openexr3.patch \
     ffmpeg4.4.patch \
-    fadetext.patch
+    fadetext.patch \
+    0009-opencascade-7.8.patch
 }
 
 build() {
