uutils-coreutils: rebuild a try to check it out after we changed CLANG64 host...

--- a/mingw-w64-uutils-coreutils/PKGBUILD
+++ b/mingw-w64-uutils-coreutils/PKGBUILD
@@ -4,7 +4,7 @@ _realname=coreutils
 pkgbase=mingw-w64-uutils-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-uutils-${_realname}")
 pkgver=0.0.27
-pkgrel=1
+pkgrel=2
 pkgdesc="Cross-platform Rust rewrite of the GNU coreutils (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -15,33 +15,25 @@ msys2_references=(
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-oniguruma")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-pkgconf")
-source=("https://github.com/uutils/coreutils/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "dont-generate-man-completions.patch")
-sha256sums=('3076543a373c8e727018bd547cc74133f4a6538849e4990388f2bbea9a9aff6b'
-            '288d195cced7f39a477c9420cb2957349c72facd75a137351d88d2363d7b935d')
+source=("https://github.com/uutils/coreutils/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('3076543a373c8e727018bd547cc74133f4a6538849e4990388f2bbea9a9aff6b')
 
 prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-
-  cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
-
-  # coreutils binary segfaults when writing the output into a file
-  if [[ $MSYSTEM == CLANG64 ]]; then
-    patch -Np1 -i "${srcdir}/dont-generate-man-completions.patch"
-  fi
+  cd "${_realname}-${pkgver}"
 
   cargo update -p windows-targets@0.48.0 --precise 0.48.1
+  cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   export RUSTONIG_DYNAMIC_LIBONIG=1
   make PROFILE=release
 }
 
 package() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   export RUSTONIG_DYNAMIC_LIBONIG=1
   make install DESTDIR="${pkgdir}" PREFIX="${MINGW_PREFIX}"
